Sat Mar 22 00:06:00 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (am_install_var): Make sure to delete
	CYGWIN/NOTCYGWIN tokens as appropriate.
	(handle_programs): Remove NOTCYGWIN tokens as well.
	(file_contents_with_transform): A single newline makes an empty
	line.

	* program.am: Remove executable before linking.

	* texinfos.am (.texi.dvi): Look in @TEXINFODIR@ for texinfo.tex.
	(.texinfo.dvi): Likewise.

	* automake.in (handle_texinfo): TEXINFO_TEX variable can set
	location of texinfo.tex.

Fri Mar 21 10:22:51 1997  Tom Tromey  <tromey@cygnus.com>

	* texinfos.am (.texinfo.dvi): Mirror .texi.dvi.

	* ansi2knr.c, ansi2knr.1: New versions from L. Peter Deutsch.

	* scripts.am: Add @EXEEXT@ to installed scripts.

Wed Jan 22 20:12:31 1997  Jim Meyering  <meyering@na-net.ornl.gov>

	* m4/mktime.m4 (AM_FUNC_MKTIME): Run tests for each of a few values
	for the TZ environment variable.  Andre Novaes Cunha provided the
	hairy TZ setting that exercized the Solaris tzset bug.

1997-01-22  Paul Eggert  <eggert@twinsun.com>

	* m4/mktime.m4: (AM_FUNC_MKTIME): Fix bug in mktime test -- don't
	test now, test a couple of thousand times.

Thu Mar 20 00:16:54 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_programs): Remove CYGWIN lines unless
	AM_CYGWIN32 seen.
	(am_install_var): Remove CYGWIN lines from -clean file as well.

	* progs.am: Put @EXEEXT@ where appropriate.

	* program.am (@PROGRAM@): If using Cygwin32, then create actual
	name in addition to ".exe" name.

	* progs-clean.am (clean-@DIR@PROGRAMS): Conditionalize on CYGWIN.

	* automake.in (check_cygnus): Require AM_CYGWIN32 in --cygnus mode.
	(am_install_var): If AM_CYGWIN32 not seen, then remove @EXEEXT@
	from .am files.

	* automake.in (seen_cygwin32): New global.
	(scan_one_configure_file): Check for AM_CYGWIN32.

	* m4/cygwin.m4: New file.

	* automake.in (scan_one_configure_file): Explicitly handle
	AC_CONFIG_HEADER so we can avoid spurious warnings.