@@ -1,6 +1,9 @@
 Priorities for release:
 * copyrights on m4 files, aclocal output
 
+* if no AM_INIT_AUTOMAKE, then don't handle `missing' stuff.
+  Yuck!
+
 * should not put texiname_TEXINFOS into distribution
   should rename this macro anyway, to foo_texi_DEPENDENCIES
 
@@ -26,9 +29,6 @@ non-C source in a libtool library specification.
   strictness should only cover requirements
   You should be able to pick and choose options
 
-* cygwin32 support: add .exe to all executables; discover cygwin32
-  without using ac_canonical_*.
-
 should clean up texinfos.am; one rule is repeated 3 times, but
 shouldn't be
 
@@ -46,12 +46,6 @@ rewrite in guile
 
 * consider adding pkglibexecdir, maybe others?
   requests for pkg-dirs with version included
-
-Fix ansi2knr so that knr-style function decls aren't incorrectly
-rewritten.  Or, fix automake so that not all sources in a directory
-must be ansi.  Should also fix things so that a separate ._o file is
-not needed; instead use a wrapper script.
-
 
 Further:
 - man page fixes
@@ -115,9 +109,6 @@ From Jason Molenda:
 
 Jim's idea: should look for @setfilename and warn if filenames too long
 * guess split size
-* allow ".info" to be missing
-
-* must update GNU Hello
 
 ** many requests for a way to omit a file from the distribution.
    Should be done like `!foo' or `~foo' in _SOURCES, etc.
@@ -312,15 +303,6 @@ together and rules are in the usual order.
 Make the output minimal: only output definitions for variables that
 are used.
 
-Look at dist's jmake for ideas.  dist is the name of the distribution
-including Metaconfig.  Perl uses it.
-
-Should handle directory hierarchies deeper than 2.  Right now there is
-some support for this.  Here are some of the issues:
-* Should handle AC_CONFIG_SUBDIRS, ie must handle configure.in in subdirs
-    * can do this by looking at subdirs, seeing configure.in
-      and auto-running Automake there
-
 djm says:
 David> To avoid comments like the one about subdirs getting buried in
 David> the middle of a Makefile.in, how about pushing comments that
@@ -342,6 +324,11 @@ containing application.
 ================================================================
 
 Document:
+
+how to use the generated makefiles
+ - standard targets
+ - required targets
+ - NORMAL_INSTALL junk
 
 what goes in AC_CONFIG_AUX_DIR
 
