@@ -1,3 +1,8 @@
+Mon Mar 24 23:28:59 1997  Tom Tromey  <tromey@cygnus.com>
+
+	* header-vars.am (NORMAL_INSTALL, PRE_INSTALL, POST_INSTALL):
+	Define.
+
 Sat Mar 22 00:06:00 1997  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (am_install_var): Make sure to delete
